Forgot a p in Play

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
       <img src="/lang-logo.png">
     </a>
     <h1>Putekrig</h1>
-    <p>lay a song based on your location.</p>
+    <p>Play a song based on your location.</p>
     <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span> Start playing</a>
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Stop playing/a>
   </div>
