Added pute logo

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,12 +11,12 @@
 <div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
+      <img src="http://www.naturaworld.com/wp-content/uploads/product_images/pillows/cloud-pillow.png" style="height:50px;">
     </a>
     <h1>Putekrig</h1>
     <p>Play a song based on your location.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span> Start playing</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Stop playing/a>
+    <a type="button" class="btn btn-lg btn-default" href="#"><span class="glyphicon glyphicon-flash"></span> Start playing</a>
+    <a type="button" class="btn btn-lg btn-primary" href="#"><span class="glyphicon glyphicon-download"></span> Stop playing</a>
   </div>
 </div>
 <div class="container">
