Forgot to set url for history link

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,8 +4,8 @@
       <li class="active">
         <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
       </li>
-      <li class="active">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> History</a>
+      <li>
+        <a href="/history"><span class="glyphicon glyphicon-home"></span> History</a>
       </li>
       <li>
         <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Putekrig Works</a>
