Added glyphicon for history link

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
         <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
       </li>
       <li>
-        <a href="/history"><span class="glyphicon glyphicon-home"></span> History</a>
+        <a href="/history"><span class="glyphicon glyphicon-calendar"></span> History</a>
       </li>
       <li>
         <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Putekrig Works</a>
