--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -11,7 +11,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
-      <img src="https://cdn2.iconfinder.com/data/icons/flaticons-stroke/16/history-1-512.png" style="height:50px;">
+      <img src="https://cdn2.iconfinder.com/data/icons/flaticons-stroke/16/history-1-512.png">
     </a>
     <h1>History</h1>
   </div>
