--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -11,7 +11,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
-   
+      <img src="http://www.naturaworld.com/wp-content/uploads/product_images/pillows/cloud-pillow.png" style="height:50px;">
     </a>
     <h1>History</h1>
   </div>
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> Latest trips</h3>
+      <h3><span class="glyphicon glyphicon-pushpin"></span> Latest trips</h3>
       <ul>
         <li>Stortinget to Majorstuen</li>
         <li>Frogner to Ullevål</li>
@@ -27,7 +27,7 @@
       </ul>
     </div>
     <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Statistics</h3>
+      <h3><span class="glyphicon glyphicon-object-align-bottom"></span> Statistics</h3>
       <ul>
 
       </ul>
