--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <% include ../partials/header.ejs %>
+  <script type="text/javascript" src="scripts/trip.js"></script>
 </head>
 
 <body>
