--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-app="history">
 <head>
-  <% include ../partials/header.ejs %>
+  <% include ../partials/header.ejs %>  
+  <script type="text/javascript" src="/scripts/data.js"></script>
+  <script type="text/javascript" src="/scripts/history.js"></script>
 </head>
 
 <body>
@@ -18,12 +20,10 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" data-ng-controller="latestTripsCtrl">
       <h3><span class="glyphicon glyphicon-pushpin"></span> Latest trips</h3>
       <ul>
-        <li>Stortinget to Majorstuen</li>
-        <li>Frogner to Ullevål</li>
-        <li>Lillestrøm til Stavanger</li>
+        <li data-ng-repeat="t in trips">From {{t.From}} to {{t.To}} playing 5 songs.</li>
       </ul>
     </div>
     <div class="col-md-6">
