--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,8 +15,8 @@
     </a>
     <h1>Putekrig</h1>
     <p>Play a song based on your location.</p>
-    <a type="button" class="btn btn-lg btn-default" href="#"><span class="glyphicon glyphicon-flash"></span> Start playing</a>
-    <a type="button" class="btn btn-lg btn-primary" href="#"><span class="glyphicon glyphicon-download"></span> Stop playing</a>
+    <button type="button" id="start-playing" class="btn btn-lg btn-default" href="#"><span class="glyphicon glyphicon-flash"></span> Start playing</button>
+    <button type="button" id="stop-playing" class="btn btn-lg btn-primary" href="#"><span class="glyphicon glyphicon-download"></span> Stop playing</button>
   </div>
 </div>
 <div class="container">
