--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.1/angular.min.js"></script>
+<script type="text/javascript" src="/scripts/spotify.js"></script>
 <script type="text/javascript" src="/scripts/w3w.js"></script>
 <script type="text/javascript" src="/scripts/main.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
