Markers on map @ Trip page

--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -2,7 +2,6 @@
 <html data-ng-app="history">
 <head>
   <% include ../partials/header.ejs %>  
-  <script type="text/javascript" src="/scripts/data.js"></script>
   <script type="text/javascript" src="/scripts/history.js"></script>
 </head>
 
@@ -23,7 +22,7 @@
     <div class="col-md-6" data-ng-controller="latestTripsCtrl">
       <h3><span class="glyphicon glyphicon-pushpin"></span> Latest trips</h3>
       <ul>
-        <li data-ng-repeat="t in trips">From {{t.From}} to {{t.To}} playing 5 songs.</li>
+        <li data-ng-repeat="t in trips"><a data-ng-href="/history/{{t.objectId}}">From {{t.From}} to {{t.To}} playing {{t.Songs.length}} songs.</a></li>
       </ul>
     </div>
     <div class="col-md-6">
