Added page guide

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
         <a href="/history"><span class="glyphicon glyphicon-calendar"></span> History</a>
       </li>
       <li>
-        <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Putekrig Works</a>
+        <a href="/guide"><span class="glyphicon glyphicon-user"></span> How Putekrig Works</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
