--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -27,8 +27,15 @@
     </div>
     <div class="col-md-6">
       <h3><span class="glyphicon glyphicon-object-align-bottom"></span> Statistics</h3>
-      <ul>
-
+      <ul class="list-group">
+          <li class="list-group-item"><b>Total trips:</b><span class="pull-right">148</span></li>
+          <li class="list-group-item"><b>Songs added:</b><span class="pull-right">5430</span></li>
+          <li class="list-group-item"><b>Trips this week:</b><span class="pull-right">5</span></li>
+          <li class="list-group-item"><b>Songs this week:</b><span class="pull-right">9</span></li>
+          <li class="list-group-item"><b>Trips this month:</b><span class="pull-right">12</span></li>
+          <li class="list-group-item"><b>Songs this month:</b><span class="pull-right">19</span></li>
+          <li class="list-group-item"><b>Trips this year:</b><span class="pull-right">30</span></li>
+          <li class="list-group-item"><b>Songs this year:</b><span class="pull-right">600</span></li>
       </ul>
     </div>
   </div> <!-- row -->
