--- a/views/pages/player.ejs
+++ b/views/pages/player.ejs
@@ -19,6 +19,7 @@
     <div class="col-md-8">
     </div>
     <div class="col-md-4">
+        <button type="button" id="stop-playing" class="btn btn-lg btn-primary" href="#"><span class="glyphicon glyphicon-download"></span> Stop playing</button>
     </div>
   </div>
 </div>
