--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,12 +10,11 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="http://www.naturaworld.com/wp-content/uploads/product_images/pillows/cloud-pillow.png" style="height:50px;">
-    </a>
+    <img src="https://play.spotify.edgekey.net/site/19b6d34/images/favicon.png">
     <h1>Putekrig</h1>
     <p>Play a song based on your location.</p>
-    <button type="button" id="start-playing" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-flash"></span> Start playing</button>
+    <a id="start-playing" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-triangle-right"></span> Start playing</a>
+    <a href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
   </div>
 </div>
 <div class="container">
@@ -32,7 +31,7 @@
   <div class="container">
     <div id="login">
       <h1>This is an example of the Authorization Code flow</h1>
-      <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+      
     </div>
     <div id="loggedin">
       <div id="user-profile">
