Commented out sample spotify data in dom

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-  <div class="container">
+  <!--<div class="container">
     <div id="login">
       <h1>This is an example of the Authorization Code flow</h1>
       
@@ -68,6 +68,6 @@
       <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
       <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}></dd>
     </dl>
-  </script>
+  </script>-->
 </body>
 </html>
