--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -4,6 +4,18 @@
   <% include ../partials/header.ejs %>
   <style type="text/css">
     h4 span:not(.glyphicon) { padding-left: 10px; }
+    .guide-index {
+          position: absolute;
+    right: 6px;
+    top: 6px;
+    font-size: 34px;
+    background-color: #B01302;
+    width: 50px;
+    border-radius: 50%;
+    height: 50px;
+    text-align: center;
+    color: #fff;
+    }
   </style>
 </head>
 
@@ -20,7 +32,7 @@
   <div class="row">
     <div class="col-md-12">
       <ul class="list-group">
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-play-circle"></span> <span>Start playing</span></h4></li>  
+        <li class="list-group-item"><h4><span class="glyphicon glyphicon-play-circle"></span> <span>Start playing</span></h4><div class="guide-index pull-right">1</div></li>  
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-road"></span> <span>Start moving</span></h4></li>  
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-time"></span> <span>Putekrig pulls another song every 4 minutes based on your location</span></h4></li>
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-stop"></span> <span>Stop playing</span></h4></li>   
