--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,11 +19,8 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-     
-    </div>
-    <div class="col-md-6">
-
+    <div class="col-xs-12">
+      <div id="embeded-spotify-player"></div>
     </div>
   </div>
 </div>
