--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -25,7 +25,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <h1>How Putekrig works</h1>
+    <h1><span class="glyphicon glyphicon-cog"></span> How Putekrig works</h1>
   </div>
 </div>
 <div class="container">
