--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -12,10 +12,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a href="/" class="lang-logo">
-     
-    </a>
-    <h1>History</h1>
+    <h1><span class="glyphicon glyphicon-signal"></span> History</h1>
   </div>
 </div>
 <div class="container">
