Renamed to Songwalk

--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -34,7 +34,7 @@
       <ul class="list-group">
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-play-circle"></span> <span>Start playing</span></h4><div class="guide-index pull-right">1</div><div class="guide-index pull-right">1</div></li>  
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-road"></span> <span>Start moving</span></h4><div class="guide-index pull-right">2</div></li>  
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-time"></span> <span>Putekrig pulls another song every 4 minutes based on your location</span></h4><div class="guide-index pull-right">3</div></li>
+        <li class="list-group-item"><h4><span class="glyphicon glyphicon-time"></span> <span>Songwalk pulls another song every 4 minutes based on your location</span></h4><div class="guide-index pull-right">3</div></li>
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-stop"></span> <span>Stop playing</span></h4><div class="guide-index pull-right">4</div></li>   
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-floppy-save"></span> <span>Your trip is stored together with your songs</span></h4><div class="guide-index pull-right">5</div></li>   
       </ul>
