--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,8 @@
 <div class="jumbotron text-center">
   <div class="container">
     <h1>Songwalk</h1>
-    <p>Play a song based on your location.</p>
+    <p>Build playlists based on your location</p>
+    
     <a class="col-xs-12 btn btn-link" href="/guide">How does this work?</a>
 
     <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
