Improved readability on jumbotron

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
   <% include ../partials/header.ejs %>
   <style type="text/css">
     .jumbotron {
-      background-image: url('/img/jumbotron.jpg');
+      background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron.jpg');
     }
   </style>
   <script type="text/javascript" src="/scripts/index.js"></script>
