--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,18 @@
     .jumbotron {
       background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron.jpg');
     }
+    .playlist-form {
+      width: 400px;
+      margin: auto;
+    }
+    .playlist-form input {
+      padding: 22px 14px;
+      font-size: 22px;
+    }
+    .playlist-form a {
+      margin-top: 5px;
+      width: 100%;
+    }
   </style>
   <script type="text/javascript" src="/scripts/index.js"></script>
 </head>
@@ -29,10 +41,12 @@
         Want more songs in your favorite playlist? Enter its name and Songwalk will add songs to it!
         Or you could enter a hole new name and Songwalk will make a playlist for you from only the freshest ingredients.
       </p>
-      <div class="input-group col-xs-12">
-        <input type="text" class="form-control" placeholder="Songwalk" ng-model="playlistName" aria-label="Enter desired playlist name">
+      <div class="playlist-form">
+        <div class="input-group col-xs-12">
+          <input type="text" class="form-control" placeholder="Songwalk" ng-model="playlistName" aria-label="Enter desired playlist name">
+        </div>
+        <a id="start-playing" class=" btn btn-lg btn-default" ng-click="makePlaylist()">Make playlist</a>
       </div>
-      <a id="start-playing" class=" btn btn-lg btn-default" ng-click="makePlaylist()">Make playlist</a>
     </div>
   </div>
 
