Made help link more visible

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
     <h1>Songwalk</h1>
     <p>Build playlists based on your location</p>
 
-    <a class="col-xs-12 btn btn-link" href="/guide">How does this work?</a>
+    <a class="col-xs-12 btn btn-link" href="/guide" style="color:#fff"><span class="glyphicon glyphicon-question-sign"></span> How does this work?</a>
 
     <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
 
