Fixed window title

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -51,7 +51,7 @@
   </div>
 
   <a data-ng-show="spotify_userdata && playlist" id="start-playing" class="btn btn-lg btn-default">
-    <span class="glyphicon glyphicon-square"></span> Stop adding songs
+    <span class="glyphicon glyphicon-stop"></span> Stop adding songs
   </a>
 
 </div>
