Fix playlist link

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,7 +59,7 @@
   <div class="row">
     <div class="col-md-12" data-ng-show="playlist">
     <h3 class="col-xs-6"><span class="glyphicon glyphicon-music"></span> {{playlistName}}</h3>
-    <h3 class="col-xs-6 pull-right"><a href="http://open.spotify.com/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a></h3>
+    <h3 class="col-xs-6 pull-right"><a href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a></h3>
     <table class="table striped">
       <thead>
         <tr>
