Made Open in Spotify more buttony

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -54,7 +54,8 @@
     <span class="glyphicon glyphicon-stop"></span> Stop adding songs
   </a>
 
-  <h3 data-ng-show="stopped" class="col-xs-12 pull-right"><a href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a></h3>
+
+  <a class="btn btn-lg btn-active" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
 
 
 </div>
