Add missing ng-show

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,7 +55,7 @@
   </a>
 
 
-  <a class="btn btn-lg btn-active" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
+  <a data-ng-show="stopped" lass="btn btn-lg btn-active" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
 
 
 </div>
