--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -54,10 +54,7 @@
     <span class="glyphicon glyphicon-stop"></span> Stop adding songs
   </a>
 
-
-  <a data-ng-show="stopped" lass="btn btn-lg btn-active" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
-
-
+  <a data-ng-show="stopped" class="btn btn-lg btn-default" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
 </div>
 <div class="container">
   <div class="row">
