--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,7 @@
     }
   </style>
   <script type="text/javascript" src="/scripts/index.js"></script>
+  <script type="text/javascript" src="/scripts/parse.factory.js"></script>
 </head>
 
 <body data-ng-controller="mainCtrl">
