Call w3w stop on angular stop

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -45,7 +45,7 @@
         <div class="input-group col-xs-12">
           <input type="text" class="form-control" placeholder="Songwalk" ng-model="playlistName" aria-label="Enter desired playlist name">
         </div>
-        <a id="start-playing" class=" btn btn-lg btn-default" ng-click="makePlaylist()">Make playlist</a>
+        <a class=" btn btn-lg btn-default" ng-click="makePlaylist()">Make playlist</a>
       </div>
     </div>
   </div>
