--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -7,6 +7,10 @@
   <script type="text/javascript" src="/scripts/parse.factory.js"></script>
   <style type="text/css">
     .angular-google-map-container { height: 400px; }
+    .jumbotron {
+      background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron.jpg');
+      background-size: cover;
+    }
   </style>
 </head>
 
@@ -16,9 +20,6 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a href="/" class="lang-logo">
-   
-    </a>
     <h1>Trip from {{trip.From}} to {{trip.To}}</h1>
   </div>
 </div>
