--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,6 @@
 <script src='/scripts/angular-moment.min.js'></script>
 <script type="text/javascript" src="/scripts/spotify.js"></script>
 <script type="text/javascript" src="/scripts/w3w.js"></script>
+<script type="text/javascript" src="/scripts/nav.js"></script>
 <script type="text/javascript" src="/scripts/main.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
