--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -5,16 +5,26 @@
   <style type="text/css">
     h4 span:not(.glyphicon) { padding-left: 10px; }
     .guide-index {
-          position: absolute;
-    right: 6px;
-    top: 6px;
-    font-size: 34px;
-    background-color: #B01302;
-    width: 50px;
-    border-radius: 50%;
-    height: 50px;
-    text-align: center;
-    color: #fff;
+      position: absolute;
+      right: 6px;
+      top: 6px;
+      font-size: 34px;
+      background-color: #B01302;
+      width: 50px;
+      border-radius: 50%;
+      height: 50px;
+      text-align: center;
+      color: #fff;
+    }
+    .jumbotron {
+      background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron2.jpg');
+      background-size: cover;
+    }
+    .list-group li:hover {
+      background-color: #d3d3d3;
+    }
+    .list-group li:hover .guide-index {
+      background-color: #532F8C;
     }
   </style>
 </head>
@@ -25,7 +35,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <h1><span class="glyphicon glyphicon-cog"></span> How Putekrig works</h1>
+    <h1><span class="glyphicon glyphicon-cog"></span> How Songwalk works</h1>
   </div>
 </div>
 <div class="container">
@@ -36,7 +46,7 @@
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-road"></span> <span>Start moving</span></h4><div class="guide-index pull-right">2</div></li>  
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-time"></span> <span>Songwalk pulls another song every 4 minutes based on your location</span></h4><div class="guide-index pull-right">3</div></li>
         <li class="list-group-item"><h4><span class="glyphicon glyphicon-stop"></span> <span>Stop playing</span></h4><div class="guide-index pull-right">4</div></li>   
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-floppy-save"></span> <span>Your trip is stored together with your songs</span></h4><div class="guide-index pull-right">5</div></li>   
+        <li class="list-group-item"><h4><span class="glyphicon glyphicon-floppy-save"></span> <span>Your trip is stored together with your songs on the <a href="/history"/>History</a> page</span></h4><div class="guide-index pull-right">5</div></li>   
       </ul>
     </div>
   </div>
