--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -56,6 +56,9 @@
           <li class="list-group-item"><b>Start</b><span class="pull-right">{{trip.createdAt | amDateFormat:'MMM Do YYYY HH:mm'}}</span></li>       
           <li class="list-group-item"><b>End</b><span class="pull-right">{{trip.createdAt | amDateFormat:'MMM Do YYYY HH:mm'}}</span></li>       
       </ul>
+      <button type="button" class="btn btn-success" style="width:100%;" data-ng-click="saveAsPlaylist()"> Save as playlist</button>
+      <button type="button" class="btn btn-danger" style="width:100%;margin-top:5px;" data-ng-click="delete()"> Delete trip</button>
+      <a href="/history" class="btn btn-info" style="width:100%;margin-top:5px;">Back to History</a>
     </div>
   </div> <!-- row -->
 </div>
